[package]
name = "rustominoes"
version = "0.1.0"
authors = ["danilomo <danilomendoncaoliveira@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
wait-for-me = "0.2.0"

[[bin]]
name = "rustominoes-tcp"
path = "src/bin/telnet.rs"
