[package]
name = "rustominoes"
version = "0.1.0"
authors = ["danilomo <danilomendoncaoliveira@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.1"
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "rustominoes-tcp"
path = "src/bin/telnet.rs"

[[bin]]
name = "grpc-server"
path = "src/bin/grpcserver.rs"

[[bin]]
name = "grpc-client"
path = "src/bin/grpcclient.rs"